tests/fixtures/negative/naming/BooleanPropertyNaming.kt
package naming

class Example {
    val isEnabled: Boolean = true
    val hasPermission: Boolean = false
    val areValid: Boolean = true
}
